--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -1,5 +1,5 @@
 ---
-name: "grow-linux-3.2"
+name: "grow-linux-3.0"
 enable_cache: true
 suites:
 - "bionic"
@@ -32,7 +32,7 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/grow-project/grow.git"
+- "url": "https://github.com/GrowCoin-Project/grow.git"
   "dir": "grow"
 files: []
 script: |
