--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -1,5 +1,5 @@
 ---
-name: "grow-osx-3.2"
+name: "grow-osx-3.0"
 enable_cache: true
 suites:
 - "bionic"
@@ -28,7 +28,7 @@ packages:
 - "python-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/grow-project/grow.git"
+- "url": "https://github.com/GrowCoin-Project/grow.git"
   "dir": "grow"
 files:
 - "MacOSX10.11.sdk.tar.gz"
