--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -1,5 +1,5 @@
 ---
-name: "grow-win-3.2"
+name: "grow-win-3.0"
 enable_cache: true
 suites:
 - "bionic"
@@ -23,7 +23,7 @@ packages:
 - "python"
 - "rename"
 remotes:
-- "url": "https://github.com/grow-project/grow.git"
+- "url": "https://github.com/GrowCoin-Project/grow.git"
   "dir": "grow"
 files: []
 script: |
